# Rmiter-c

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  mylist.c  mylist.h
cJSON/: cJSON.c  cJSON.h
src/: course.c  course.h  course_list.c  course_list.h  ical_writer.c  ical_writer.h  json_parser.c  json_parser.h  main.c  main.h  myrmit_api.c  myrmit_api.h  myrmit_handler.c  myrmit_handler.h  myrmit_parser.c  myrmit_parser.h  parser_common.c  parser_common.h  user_cli.c  user_cli.h  util.c  util.h
